--- a/backend/views/generate.hbs
+++ b/backend/views/generate.hbs
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Blog.com</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"></link>
   </head>
   <body>
@@ -11,7 +11,7 @@
     <div class="container p-5 mt-5 d-flex justify-content-center ">
         <div
           class="container p-3 border"
-          {{!-- style={{ backgroundColor: "#F5F5F5" }} --}}
+         
         >
           <h1 class="text-center mt-3 ">Reset Password</h1>
           <form class="p-5 mt-5" method="POST">
@@ -26,7 +26,6 @@
                 type="password"
                 class="form-control border-dark border-bottom border-3 rounded-0"
                 id="password"
-                {{!-- aria-describedby="emailHelp" --}}
                 name="password"
               />
             </div>
@@ -45,14 +44,14 @@
                 />
                 
             </div>
-            {{!-- <div class="mb-5">
+            <!-- {{!-- <div class="mb-5">
               <Link to="/forget">Forgot Password</Link>
-            </div> --}}
+            </div> --}} -->
 
             <button type="submit" class="btn btn-danger mt-4">
               Reset 
             </button>
-            {{!-- <div>
+            <!-- {{!-- <div>
               <p class="fw-bold mt-3 text-center ">
                 Don't Have An Account ?{" "}
                 <Link
@@ -62,7 +61,7 @@
                   Register
                 </Link>
               </p>
-            </div> --}}
+            </div> --}} -->
           </form>
         </div>
         <div class="container border border-5">
